Fix mega menu width to wrap content exactly

--- a/assets/component-mega-menu.css
+++ b/assets/component-mega-menu.css
@@ -14,7 +14,7 @@
   position: absolute;
   right: auto;
   top: 100%;
-  width: max-content;
+  width: fit-content;
   min-width: 200px;
   max-width: calc(100vw - 4rem);
   box-shadow: 0 10px 30px rgba(0,0,0,0.1);
